--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ nav {
 }
 
 .scrim-grid-item {
-  height: 300%;
+  height: 450%;
   width: 320%;
   padding: 4rem;
   position: relative;
@@ -487,6 +487,26 @@ nav {
   text-align: center;
 }
 
+.info-message {
+  text-align: center;
+  position: absolute;
+  width: 80%;
+  top: 10%;
+  color: #98ff9f;
+}
+
+.info-message h4 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  color: white;
+}
+
+.info-message p {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.7);
+  text-align: left;
+}
+
 .about-box {
   padding: 0 1.5rem;
   margin-bottom: 2rem;
@@ -508,7 +528,14 @@ nav {
   height: 15rem;
   border-radius: 100%;
   border: 3px solid #98ff9f;
-  
+}
+
+.info-page img {
+  width: 30rem;
+  height: 30rem;
+  border-radius: 100%;
+  border: 5px solid #98ff9f;
+  text-align: center;
 }
 
 .about-grid {
@@ -547,6 +574,11 @@ footer p {
     padding-right: 5rem;
   }
 }
+@media screen and (max-width: 700px) {
+  .info-message {
+    top: 15%;
+  }
+}
 
 @media screen and (min-width: 350px) {
   .first-message {
@@ -564,7 +596,6 @@ footer p {
   .store-grid-item {
     padding-right: 2rem;
   }
-  
 }
 
 @media screen and (min-width: 700px) {
